# stats202

./: 2026-05-27_tool-range-and-chart-connect-uplift.md  2026-07-18_prism_main_component_drag_explainer.md  2026-07-20_composer_streaming_reload_change.md  2026-07-20_prism_main_all_widget_snapshot_implementation.md  README.md  altair_composites_spec.md  api_endpoints.md  apis_endeavor.md  burghardt_brain_v2.md  dashboard_qc_handoff.md  dashboard_user_input.md  gs_reference_stitched.md  issue.md  ontology_composer.json  prompt.md  prompts.md  ratios.md  reject_events.md  treasury_endpoints_debug_context.md  treasury_endpoints_integration.md  voice_memos.md  wid_client.py  wid_guide.md
archive/external_repos/defeatbeta/: .gitignore  CHANGELOG.rst  README.md  pyproject.toml  requirements.txt
archive/external_repos/defeatbeta/.binder/: postBuild
archive/external_repos/defeatbeta/defeatbeta_api/: __init__.py
archive/external_repos/defeatbeta/defeatbeta_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
archive/external_repos/defeatbeta/doc/: README.md
archive/external_repos/defeatbeta/mcp/: README.md  install  pyproject.toml  run.sh
archive/external_repos/defeatbeta/notebooks/: 00_tutorial_info.ipynb  01_tutorial_finance.ipynb  02_tutorial_value.ipynb  03_tutorial_profitability.ipynb  04_tutorial_growth.ipynb  05_tutorial_report.ipynb  06_tutorial_dcf.ipynb
archive/external_repos/defeatbeta/skills/: README.md
archive/external_repos/defeatbeta/test/: test_ai_transcripts.py  test_all_tickers.py  test_company_meta.py  test_duckdb_client.py  test_hugging_face_client.py  test_industry.py  test_report.py  test_sentences.py  test_tabulate.py  test_ticker.py  (+4 more)
(+616 files in other folders)
