[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defeatbeta-api"
dynamic = ["version"]
description = "An open-source alternative to Yahoo Finance's market data APIs with higher reliability."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "zxh2010", email = "5077921+zxh2010@users.noreply.github.com"}
]
dependencies = [
    "duckdb == 1.4.3",
    "pandas >= 3.0.1",
    "requests >= 2.33.0",
    "psutil >= 7.0.0",
    "pyfiglet >= 1.0.2",
    "urllib3 >= 2.6.3",
    "tabulate >= 0.9.0",
    "numpy >= 2.2.5",
    "rich >= 14.0.0",
    "openai >= 1.106.1",
    "nltk >= 3.9.4",
    "ipython>=8.0.0,<=8.37.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5"
]

[tool.setuptools.dynamic]
version = {attr = "defeatbeta_api.__version__.__version__"}

[tool.setuptools]
packages = ["defeatbeta_api"]

[tool.setuptools.package-data]
"defeatbeta_api" = ["**"]

[project.urls]
"Homepage" = "https://github.com/defeat-beta/defeatbeta-api"
"Bug Tracker" = "https://github.com/defeat-beta/defeatbeta-api/issues"