[project]
name = "defeatbeta-mcp"
version = "0.1.0"
description = "MCP server for defeatbeta financial data"
requires-python = ">=3.11"

dependencies = [
    "defeatbeta-api",
    "mcp>=1.25.0",
    "xlwings>=0.33.20"
]

[project.scripts]
defeatbeta-mcp = "defeatbeta_mcp.server:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
